vault/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vault.internal.prd.durp.info`)
    middlewares:
    - name: internal-only
      namespace: traefik  
    kind: Rule
    services:
    - name: vault
      port: 8200
      scheme: http
  tls:
    secretName: vault-tls
